<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"

    android:layout_height="match_parent"

    android:background="@color/colorPrimaryDark"

    tools:context=".MainActivity">



    <ImageView

        android:id="@+id/imgBack"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/_10sdp"

        android:layout_marginTop="@dimen/_20sdp"

        android:layout_marginBottom="@dimen/_10sdp"

        android:src="@drawable/ic_back"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:tint="@color/colorWhite" />



    <ImageView

        android:id="@+id/imgDone"

        android:layout_width="wrap_content"

        android:layout_height="wrap_content"

        android:layout_marginTop="@dimen/_20sdp"

        android:layout_marginEnd="@dimen/_10sdp"

        android:layout_marginBottom="@dimen/_10sdp"

        android:src="@drawable/ic_tick"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintTop_toTopOf="parent"

        app:tint="@color/colorWhite" />





    <EditText

        android:id="@+id/etNoteTitle"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_margin="@dimen/_10sdp"

        android:background="@null"

        android:ellipsize="end"

        android:fontFamily="@font/manrope_bold"

        android:hint="@string/notes_title"

        android:inputType="text"

        android:maxLines="1"

        android:padding="@dimen/_10sdp"

        android:textColor="@color/colorWhite"

        android:textColorHint="@color/colorGray"

        android:textSize="@dimen/_14ssp"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/imgBack" />





    <TextView

        android:id="@+id/tvDateTime"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/_10sdp"

        android:layout_marginTop="@dimen/_5sdp"

        android:layout_marginEnd="@dimen/_10sdp"

        android:layout_marginBottom="@dimen/_5sdp"

        android:ellipsize="end"

        android:fontFamily="@font/manrope_bold"

        android:maxLines="1"

        android:paddingStart="@dimen/_10sdp"

        android:textColor="@color/colorGray"

        android:textColorHint="@color/colorGray"

        android:textSize="@dimen/_8ssp"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/etNoteTitle" />



    <LinearLayout

        android:id="@+id/l1"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_margin="@dimen/_10sdp"

        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/tvDateTime">





        <View

            android:id="@+id/colorView"

            android:layout_width="@dimen/_5sdp"

            android:layout_height="match_parent"

            android:layout_marginStart="@dimen/_5sdp"

            android:background="@color/colorBlue" />



        <EditText

            android:id="@+id/etNoteSubTitle"

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:background="@null"

            android:ellipsize="end"

            android:fontFamily="@font/manrope_regular"

            android:hint="@string/notes_sub_title"

            android:inputType="text"

            android:maxLines="1"

            android:padding="@dimen/_10sdp"

            android:textColor="@color/colorWhite"

            android:textColorHint="@color/colorGray"

            android:textSize="@dimen/_10ssp" />

    </LinearLayout>



    <RelativeLayout

        android:id="@+id/layoutImage"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:visibility="gone"

        app:layout_constraintTop_toBottomOf="@id/l1">







        <ImageView

            android:id="@+id/imgNote"

            android:layout_width="match_parent"

            android:layout_height="@dimen/_300sdp"

            android:visibility="gone"

            android:layout_marginStart="@dimen/_10sdp"

            android:layout_marginTop="@dimen/_10sdp"

            android:layout_marginEnd="@dimen/_10sdp" />



        <ImageView

            android:id="@+id/imgDelete"

            android:layout_width="@dimen/_24sdp"

            android:layout_height="@dimen/_24sdp"

            android:layout_marginEnd="@dimen/_15sdp"

            android:layout_marginTop="@dimen/_20sdp"

            android:layout_alignParentEnd="true"

            android:visibility="gone"

            android:layout_alignParentTop="true"

            android:src="@drawable/ic_delete" />





    </RelativeLayout>



    <LinearLayout

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:id="@+id/layoutWebUrl"

        android:background="@color/colorPrimary"

        app:layout_constraintEnd_toEndOf="parent"

        android:padding="@dimen/_10sdp"

        android:visibility="gone"

        android:layout_margin="@dimen/_10sdp"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/layoutImage"

        android:orientation="vertical">



        <LinearLayout

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:gravity="center"

            android:orientation="horizontal">

            <EditText

                android:id="@+id/etWebLink"

                android:layout_width="match_parent"

                android:layout_height="wrap_content"

                android:layout_weight="1"

                android:background="@null"

                android:fontFamily="@font/manrope_regular"

                android:hint="@string/web_url"

                android:inputType="textMultiLine"

                android:padding="@dimen/_10sdp"

                android:text="http://"

                android:textColor="@color/colorWhite"

                android:textColorHint="@color/colorGray"

                android:textSize="@dimen/_12ssp" />

            <ImageView

                android:id="@+id/imgUrlDelete"

                android:layout_width="@dimen/_24sdp"

                android:layout_height="@dimen/_24sdp"

                android:visibility="gone"

                android:src="@drawable/ic_cancel" />

        </LinearLayout>







        <LinearLayout

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:layout_gravity="end"

            android:layout_marginTop="@dimen/_10sdp"

            android:gravity="end"

            android:orientation="horizontal">





            <Button

                android:layout_width="wrap_content"

                android:layout_height="@dimen/_30sdp"

                android:fontFamily="@font/manrope_bold"

                android:background="@color/colorAccent"

                android:text="@string/cancel"

                android:textSize="@dimen/_12ssp"

                android:textAllCaps="false"

                android:textColor="@color/colorWhite"

                android:id="@+id/btnCancel"/>



            <Button

                android:layout_width="wrap_content"

                android:layout_height="@dimen/_30sdp"

                android:fontFamily="@font/manrope_bold"

                android:background="@color/colorAccent"

                android:text="@string/ok"

                android:textAllCaps="false"

                android:textSize="@dimen/_12ssp"

                android:layout_marginStart="@dimen/_5sdp"

                android:textColor="@color/colorWhite"

                android:id="@+id/btnOk"/>





        </LinearLayout>

    </LinearLayout>

    <LinearLayout

        android:id="@+id/layoutVoiceNote"

        android:layout_width="2dp"

        android:layout_height="11dp"

        android:layout_margin="@dimen/_10sdp"

        android:background="@color/colorPrimary"

        android:orientation="vertical"

        android:padding="@dimen/_10sdp"

        android:visibility="gone"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/layoutImage">


        <LinearLayout

            android:layout_width="match_parent"

            android:layout_height="wrap_content"

            android:gravity="center"

            android:orientation="horizontal">

            <com.devlomi.record_view.RecordView
                android:id="@+id/record_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:layout_margin="10dp"
                android:layout_toStartOf="@id/record_button"
                android:visibility="visible"
                app:counter_time_color="#ff0000"
                app:slide_to_cancel_arrow="@drawable/recv_ic_arrow"
                app:slide_to_cancel_arrow_color="@android:color/black"
                app:slide_to_cancel_bounds="6dp"
                app:slide_to_cancel_margin_right="5dp"
                app:slide_to_cancel_text="Slide To Cancel" />

            <com.devlomi.record_view.RecordButton
                android:id="@+id/record_button"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom|end"
                android:layout_margin="6dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/recv_bg_mic"
                android:backgroundTint="@color/colorAccent"
                android:padding="17dp"
                android:scaleType="centerInside"
                android:tint="@android:color/white"
                android:visibility="visible"
                app:mic_icon="@drawable/recv_ic_mic" />

        </LinearLayout>


    </LinearLayout>

    <TextView

        android:id="@+id/tvWebLink"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/_10sdp"

        android:layout_marginTop="@dimen/_5sdp"

        android:layout_marginEnd="@dimen/_10sdp"

        android:layout_marginBottom="@dimen/_5sdp"

        android:ellipsize="end"

        android:visibility="gone"

        android:fontFamily="@font/manrope_bold"

        android:padding="@dimen/_10sdp"

        android:textColor="@color/colorGray"

        android:textColorHint="@color/colorGray"

        android:textSize="@dimen/_12ssp"

        android:autoLink="web"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/layoutWebUrl" />



    <EditText

        android:id="@+id/etNoteDesc"

        android:layout_width="match_parent"

        android:layout_height="wrap_content"

        android:layout_margin="@dimen/_10sdp"

        android:background="@null"

        android:fontFamily="@font/manrope_regular"

        android:hint="@string/notes_desc"

        android:inputType="textMultiLine"

        android:padding="@dimen/_10sdp"

        android:textColor="@color/colorWhite"

        android:textColorHint="@color/colorGray"

        android:textSize="@dimen/_12ssp"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/tvWebLink" />



    <FrameLayout

        android:layout_width="match_parent"

        android:layout_height="@dimen/_40sdp"

        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent">



        <ImageView

            android:id="@+id/imgMore"

            android:layout_width="@dimen/_24sdp"

            android:layout_height="@dimen/_24sdp"

            android:layout_gravity="center"

            android:src="@drawable/ic_remove" />

    </FrameLayout>





</androidx.constraintlayout.widget.ConstraintLayout>